--- a/charts/control-plane-operator/Chart.yaml
+++ b/charts/control-plane-operator/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: co-control-plane-operator
+name: control-plane-operator
 description: A Helm chart for the Cloud Orchestration Control Plane Operator
 type: application
 version: v0.1.5
