--- a/charts/control-plane-operator/values.yaml
+++ b/charts/control-plane-operator/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: ghcr.io/openmcp-project/images/control-plane-operator
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: v0.1.10
+  tag: v0.1.12
 
 imagePullSecrets: []
 nameOverride: ""
@@ -63,7 +63,8 @@ extraVolumes: []
 podAnnotations: {}
 podLabels: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
 securityContext:
@@ -74,7 +75,8 @@ securityContext:
   # readOnlyRootFilesystem: true
   # runAsUser: 1000
 
-resources: {}
+resources:
+  {}
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
