--- a/charts/control-plane-operator/templates/deployment.yaml
+++ b/charts/control-plane-operator/templates/deployment.yaml
@@ -125,6 +125,9 @@ spec:
             {{ if .Values.syncPeriod }}
             - "--sync-period={{ .Values.syncPeriod }}"
             {{ end }}
+            {{ if .Values.fluxTokenLifetime }}
+            - "--flux-token-lifetime={{ .Values.fluxTokenLifetime }}"
+            {{ end }}
           ports:
           {{- if .Values.webhooks.listen }}
             - name: webhooks-https
